<resources>
    <string name="app_name">ReactionTestingGame</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="go_to_register">Register Here</string>
    <string name="go_to_login">Login here</string>
    <string name="username">Username</string>
    <string name="passwordConfirm">Password again</string>
    <string name="registerText">Register</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome!\nStart a new game!</string>
    <string name="start_game">Start Game</string>
    <string name="delete_account">Delete account</string>
</resources>